--- a/site-plan.html
+++ b/site-plan.html
@@ -12,7 +12,7 @@
     <header>
       <h1>Portfolio Site Plan</h1>
       <h2>Noah Merrell</h2>
-      <h2>[section]</h2>
+      <h2>WDD 130.07</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -21,17 +21,17 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>The purpose of my website is to design a visually appealing and informative website containing various information about me and my skills. Information on past projects, work experience, volunteer efforts, and education will be available on a visually appealing online site.</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>This website will empower employers to view all they need to know about me, including a general overview and specific details. It's intended audience is for those hiring me in the future or just those who want to know more about me.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
+      <img src="images/portfolio_icon.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -58,10 +58,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: EB Garamond  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: Times New Roman  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
