Updated site plan

--- a/site-plan.html
+++ b/site-plan.html
@@ -84,8 +84,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Resume</a>
+        <a href="#">About Me</a>
       </nav>
       <hr>
       <h2>
@@ -121,29 +121,82 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        <b>Introduction</b><br>
+        My name is Noah Merrell and I come from Port Orchard WA. I have a deep passion for programming, utilizing software, as well as creative writing. On this website you'll find more information about me as well as my professional resume.<br>
+        <br>
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/noah-portrait.webp" alt="professional portrait photo of noah">
+        <img src="images/noah-crouched.webp" alt="portrait of noah crouched in front of water">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Resume page</h3>
       <p>
-        [Written copy for the Page 2 here]
+        <b>Professional Summary</b><br>
+        Self-motivated and responsible worker who seeks to utilize time as efficiently and effectively as possible. Served as a full-time proselyting missionary for 2 years which involved diligently engaging in various activities including proselytizing, church service, humanitarian aid, and community service with an individual schedule planned daily. Employed at Burger King and operated amongst a team to prepare food in a fast-paced environment.<br>
+        <br>
+        <b>Education</b><br>
+        <i>Computer Science Major - Brigham Young University - Idaho | Jan 2024 to Apr 2026</i><br>
+        Currently taking the following courses:<br>
+        Computer Systems<br>
+        Introduction to Computing<br>
+        Computer to Databases<br>
+        Programming with Classes<br>
+        Technical Teamwork<br>
+        Web Fundamentals<br>
+        <i>Associates of Arts Computer Science Emphasis - Olympic Community College | Sep 2019 to Jun 2021</i><br>
+        Calculus 1, 2, 3<br>
+        Computer Science 1, 2<br>
+        Design 1, 2, 3<br>
+        Linear Algebra<br>
+        <i>Washington High School Diploma - Olympic Community College | Sep 2019 to Jun 2021</i><br>
+        Running Start Program<br>
+        <br>
+        <b>Skills</b><br>
+        Programming Language Experience: Python, Java, C++, C#, HTML, CSS, MySQL<br>
+        Productivity Software<br>
+        Typing<br>
+        Technical and creative writing<br>
+        <br>
+        <b>Experience</b><br>
+        <i>Crew Member - Sedgewick Burger King | Aug 2023 to Dec 2023</i><br>
+        Cooperated with co-workers to prepare menu items and ensure customer service in a timely fashion<br>
+        Coordinated quickly amongst crew to maintain efficient work<br>
+        Carefully monitored food items and inventory hourly to prevent cross-contamination, ensure fresh food, and keep equipment clean<br>
+        Devoted to an assigned 40-hour schedule while remaining flexible to changes<br>
+        <i>Proselyting Missionary - Farmington, New Mexico - The Church of Jesus Christ of Latter-day Saints | Jul 2021 to Jul 2023</i><br>
+        Served among Navajo Nation<br>
+        Found and talked to new people with whom to share a message every day in diverse manners<br>
+        Taught in on-on-one or small group setting daily<br>
+        Trained and directed work of 4-8 other missionaries while serving in various leadership positions<br>
+        Scheduled appointments daily and weekly<br>
+        Reported weekly to leaders<br>
+        <i>New Mexico Mission of Mercy - Farmington, New Mexico | Jul 2022</i><br>
+        Enter data for dental work<br>
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+      <p>Images for the Resume page</p>
+        <img src="images/brandi-redd-white-background.webp" alt="image of white background with squares">
+        <img src="images/walkator-code.webp" alt="image of code">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>About Me page</h3>
       <p>
-        [Written copy for the Page 3 here]
+        <b>Where have you been?</b><br>
+        I come from Port Orchard Washington which is where I've lived the majority of my life. I then went served as a proselyting missionary for the Church of Jesus Christ of Latter-day Saints for two years during which I served in Sanders AZ, Indian Wells AZ, Toadlena NM, and Lupton AZ. Afterwards, I've been attending school at Brigham Young University - Idaho in Rexburg ID.<br>
+        <br>
+        <b>How has your family influenced who you are today?</b><br>
+        I am very close to my family despite us currently living in different states from one another. As the youngest of four, I've had the unique perspective of being able to learn from their example and receive a plethora of helpful advice for the future. My sister and two brothers are all married and I've been able to learn from my in-laws as well. My family has played a major role in defining who I am today and my loving parents have taught my valuable life lessons that has enabled me to flourish and grow.<br>
+        <br>
+        <b>What are your hobbies and interests?</b><br>
+        I love working with computers and software, whether that be programming, image editing software, or spreadsheet applications. I enjoy playing a myriad of board games and video games, as well as designing my own. I also am passionate about creative writing and developing my own unique ideas and settings.<br>
+        <br>
+        <b>What is your educational background?</b><br>
+        Growing up, I attended Burley Glenwood Elementary and Cedar Heights Middle School. In my freshman and sophmore year of high school I attended Washington Virtual Academies before enrolling the Running Start Program in Olympic College where I earned my high school diploma and Associated of Arts. After serving a 2 year mission I've been attending Brigham Young University - Idaho as a Computer Science major.<br>
+        <br>
       </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+      <p>Images for the About Me</p>
+        <img src="images/merrell-family.webp" alt="A photo of the Merrell family">
+        <img src="images/merrell-family-hats.webp" alt="A photo of the Merrell family with hats">
 
       </ul>
       <hr>
