--- a/site-plan.html
+++ b/site-plan.html
@@ -96,10 +96,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Resume <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          About Me  <!-- change this -->
         </div>
 
         <div class="top">
@@ -208,21 +208,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        Additional text may be included here.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/wireframes/home-wireframe.JPG" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
-      <p>         
+      <h3>Resume</h3>
+      <!-- <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 2 wireframe">
+      </p> -->
+      <img src="images/wireframes/resume-wireframe.JPG" alt="resume page wireframe">
 
-      <h3>[Page 3]</h3>
-      <p>         
+      <h3>About Me</h3>
+      <!-- <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 3 wireframe">
+      </p> -->
+      <img src="images/wireframes/about-me-wireframe.JPG" alt="aboue me page wireframe">
     </main>
   </body>
 
