Began work on html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         </nav>
     </header>
     <main>
-        
+        <h1>Home</h1>
+        <img src="images/noah-portrait.webp" alt="portrait of Noah">
+        <h2>Introduction</h2>
+        <p>My name is Noah Merrell and I come from Port Orchard WA. I have a deep passion for programming, utilizing software, as well as creative writing. On this website you'll find more information about me as well as my professional resume.</p>
     </main>
     <footer>
         <p>Portfolio &copy; 2024 - Noah Merrell</p>
