--- a/site-plan.html
+++ b/site-plan.html
@@ -140,7 +140,7 @@
         Currently taking the following courses:<br>
         Computer Systems<br>
         Introduction to Computing<br>
-        Computer to Databases<br>
+        Introduction to Databases<br>
         Programming with Classes<br>
         Technical Teamwork<br>
         Web Fundamentals<br>
