--- a/site-plan.html
+++ b/site-plan.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title>Site Plan</title>
     <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
 
   <body>
