--- a/resume.html
+++ b/resume.html
@@ -9,9 +9,10 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="images/portfolio_icon.png" alt="portfolio icon">
+            <img class="logo" img src="images/portfolio_icon.png" alt="portfolio icon">
         </a>
         <nav>
+            <a href="index.html">Home</a>
             <a href="resume.html">Resume</a>
             <a href="aboutme.html">About Me</a>
         </nav>
