--- a/index.html
+++ b/index.html
@@ -18,17 +18,31 @@
         </nav>
     </header>
     <main>
-        <h1>Home</h1>
-        <img src="images/noah-portrait.webp" alt="portrait of Noah">
-        <h2>Introduction</h2>
-        <p>My name is Noah Merrell and I come from Port Orchard WA. I have a deep passion for programming, utilizing software, as well as creative writing. On this website you'll find more information about me as well as my professional resume.</p>
+        <div class="home-parallax">
+            <h1 class="page-title">Home</h1>
+        </div>
+        <div class="home-grid">
+            <img src="images/noah-portrait.webp" alt="portrait of Noah">
+            <div class="home-text">
+                <h2>Introduction</h2>
+                <p>My name is Noah Merrell and I come from Port Orchard WA. I have a deep passion for programming, utilizing software, as well as creative writing. On this website you'll find more information about me as well as my professional resume.</p>
+                <p>I have experience in the following languages:</p>
+                <ul>
+                    <li>C#</li>
+                    <li>Python</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>MySQL</li>
+                </ul>
+            </div>
+        </div>
     </main>
     <footer>
         <p>Portfolio &copy; 2024 - Noah Merrell</p>
             <p><a href="site-plan.html">Site Plan</a></p>
             <div class="social">
                 <a href="https://github.com/NoahWMerrell" target="_blank">
-                    <img src="images/github-mark/github-mark.png" alt="github icon">
+                    <img src="images/github-mark/github-mark-white.png" alt="github icon">
                 </a>
             </div>
     </footer>
