--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link type="text/css" rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
     <header>
