--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         </div>
     </main>
     <footer>
-        <p>Portfolio &copy; 2024 - Noah Merrell</p>
-            <p><a href="site-plan.html">Site Plan</a></p>
-            <div class="social">
-                <a href="https://github.com/NoahWMerrell" target="_blank">
-                    <img src="images/github-mark/github-mark-white.png" alt="github icon">
-                </a>
-            </div>
+        <p class="copy">Portfolio &copy; 2024 - Noah Merrell</p>
+        <p><a href="site-plan.html">Site Plan</a></p>
+        <div class="social">
+            <a href="https://github.com/NoahWMerrell" target="_blank">
+                <img src="images/github-mark/github-mark-white.png" alt="github icon">
+            </a>
+        </div>
     </footer>
 </body>
 </html>
