--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="home-text">
                 <h2>Introduction</h2>
                 <p>My name is Noah Merrell and I come from Port Orchard WA. I have a deep passion for programming, utilizing software, as well as creative writing. On this website you'll find more information about me as well as my professional resume.</p>
-                <p>I have experience in the following languages:</p>
+                <p>I have experience in the following programming languages:</p>
                 <ul>
                     <li>C#</li>
                     <li>Python</li>
