--- a/aboutme.html
+++ b/aboutme.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me | Noah Merrell</title>
-    <link type="text/css" rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
     <link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
     <header>
         <a href="index.html">
-            <img class="logo" img src="images/portfolio_icon.png" alt="portfolio icon">
+            <img class="logo" src="images/portfolio_icon.png" alt="portfolio icon">
         </a>
         <nav>
             <a href="index.html">Home</a>
