--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume | Noah Merrell</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
     <header>
