Updated footer to h4

--- a/aboutme.html
+++ b/aboutme.html
@@ -31,8 +31,8 @@
         <p>Growing up, I attended Burley Glenwood Elementary and Cedar Heights Middle School. In my freshman and sophmore year of high school I attended Washington Virtual Academies before enrolling the Running Start Program in Olympic College where I earned my high school diploma and Associated of Arts. After serving a 2 year mission I've been attending Brigham Young University - Idaho as a Computer Science major.</p>
     </main>
     <footer>
-        <p class="copy">Portfolio &copy; 2024 - Noah Merrell</p>
-        <p><a href="site-plan.html">Site Plan</a></p>
+        <h4 class="copy">Portfolio &copy; 2024 - Noah Merrell</h4>
+        <h4><a href="site-plan.html">Site Plan</a></h4>
         <div class="social">
             <a href="https://github.com/NoahWMerrell" target="_blank">
                 <img src="images/github-mark/github-mark-white.png" alt="github icon">
