--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </div>
     </main>
     <footer>
-        <p class="copy">Portfolio &copy; 2024 - Noah Merrell</p>
-        <p><a href="site-plan.html">Site Plan</a></p>
+        <h4 class="copy">Portfolio &copy; 2024 - Noah Merrell</h4>
+        <h4><a href="site-plan.html">Site Plan</a></h4>
         <div class="social">
             <a href="https://github.com/NoahWMerrell" target="_blank">
                 <img src="images/github-mark/github-mark-white.png" alt="github icon">
