Updated resume parallax

--- a/resume.html
+++ b/resume.html
@@ -19,8 +19,9 @@
         </nav>
     </header>
     <main>
-        <h1>Resume</h1>
-        <img src="images/walkator-code.webp" alt="portrait of Noah">
+        <div class="resume-parallax">
+            <h1 class="page-title">Resume</h1>
+        </div>
         <h2>Professional Summary</h2>
         <p>Self-motivated and responsible worker who seeks to utilize time as efficiently and effectively as possible. Served as a full-time proselyting missionary for 2 years which involved diligently engaging in various activities including proselytizing, church service, humanitarian aid, and community service with an individual schedule planned daily. Employed at Burger King and operated amongst a team to prepare food in a fast-paced environment.</p>
         <h2>Education</h2>
