Updated aboutme and resume page

--- a/resume.html
+++ b/resume.html
@@ -22,64 +22,78 @@
         <div class="resume-parallax">
             <h1 class="page-title">Resume</h1>
         </div>
-        <h2>Professional Summary</h2>
-        <p>Self-motivated and responsible worker who seeks to utilize time as efficiently and effectively as possible. Served as a full-time proselyting missionary for 2 years which involved diligently engaging in various activities including proselytizing, church service, humanitarian aid, and community service with an individual schedule planned daily. Employed at Burger King and operated amongst a team to prepare food in a fast-paced environment.</p>
-        <h2>Education</h2>
-        <h4>Computer Science Major - Brigham Young University - Idaho</h4>
-        <h4><i>Jan 2024 to Apr 2026</i></h4>
-        <p>Currently taking the following courses:</p>
-        <ul>
-            <li>Computer Systems</li>
-            <li>Introduction to Computing</li>
-            <li>Introduction to Databases</li>
-            <li>Programming with Classes</li>
-            <li>Technical Teamwork</li>
-            <li>Web Fundamentals</li>
-        </ul>
-        <h4>Associates of Arts Computer Science Emphasis - Olympic Community College</h4>
-        <h4><i>Sep 2019 to Jun 2021</i></h4>
-        <ul>
-            <li>Calculus 1, 2, 3</li>
-            <li>Computer Science 1, 2</li>
-            <li>Design 1, 2, 3</li>
-            <li>Linear Algebra</li>
-        </ul>
-        <h4>Washington High School Diploma - Olympic Community College</h4>
-        <h4><i>Sep 2019 to Jun 2021</i></h4>
-        <ul>
-            <li>Running Start Program</li>
-        </ul>
-        <h2>Skills</h2>
-        <ul>
-            <li>Programming Language Experience: Python, Java, C++, C#, HTML, CSS, MySQL</li>
-            <li>Productivity Software</li>
-            <li>Typing</li>
-            <li>Technical and creative writing</li>
-        </ul>
-        <h2>Experience</h2>
-        <h4>Crew Member - Sedgewick Burger King</h4>
-        <h4><i>Aug 2023 to Dec 2023</i></h4>
-        <ul>
-            <li>Cooperated with co-workers to prepare menu items and ensure customer service in a timely fashion</li>
-            <li>Coordinated quickly amongst crew to maintain efficient work</li>
-            <li>Carefully monitored food items and inventory hourly to prevent cross-contamination, ensure fresh food, and keep equipment clean</li>
-            <li>Devoted to an assigned 40-hour schedule while remaining flexible to changes</li>
-        </ul>
-        <h4>Proselyting Missionary - Farmington, New Mexico - The Church of Jesus Christ of Latter-day Saints</h4>
-        <h4><i>Jul 2021 to Jul 2023</i></h4>
-        <ul>
-            <li>Served among Navajo Nation</li>
-            <li>Found and talked to new people with whom to share a message every day in diverse manners</li>
-            <li>Taught in on-on-one or small group setting daily</li>
-            <li>Trained and directed work of 4-8 other missionaries while serving in various leadership positions</li>
-            <li>Scheduled appointments daily and weekly</li>
-            <li>Reported weekly to leaders</li>
-        </ul>
-        <h4>New Mexico Mission of Mercy - Farmington, New Mexico</h4>
-        <h4><i>Jul 2022</i></h4>
-        <ul>
-            <li>Entered data for dental work</li>
-        </ul>
+        <div class="resume-content">
+            <h2>Professional Summary</h2>
+            <p>Self-motivated and responsible worker who seeks to utilize time as efficiently and effectively as possible. Served as a full-time proselyting missionary for 2 years which involved diligently engaging in various activities including proselytizing, church service, humanitarian aid, and community service with an individual schedule planned daily. Employed at Burger King and operated amongst a team to prepare food in a fast-paced environment.</p>
+            <h2>Education</h2>
+            <div class="name-date">
+                <h3>Computer Science Major - Brigham Young University - Idaho</h3>
+                <h4 class="resume-date">Jan 2024 to Apr 2026</h4>
+            </div>
+            <p>Currently taking the following courses:</p>
+            <ul>
+                <li>Computer Systems</li>
+                <li>Introduction to Computing</li>
+                <li>Introduction to Databases</li>
+                <li>Programming with Classes</li>
+                <li>Technical Teamwork</li>
+                <li>Web Fundamentals</li>
+            </ul>
+            <div class="name-date">
+                <h3>Associates of Arts Computer Science Emphasis - Olympic Community College</h3>
+                <h4 class="resume-date">Sep 2019 to Jun 2021</h4>
+            </div>
+            <ul>
+                <li>Calculus 1, 2, 3</li>
+                <li>Computer Science 1, 2</li>
+                <li>Design 1, 2, 3</li>
+                <li>Linear Algebra</li>
+            </ul>
+            <div class="name-date">
+                <h3>Washington High School Diploma - Olympic Community College</h3>
+                <h4 class="resume-date">Sep 2019 to Jun 2021</h4>
+            </div>
+            <ul>
+                <li>Running Start Program</li>
+            </ul>
+            <h2>Skills</h2>
+            <ul>
+                <li>Programming Language Experience: Python, Java, C++, C#, HTML, CSS, MySQL</li>
+                <li>Productivity Software</li>
+                <li>Typing</li>
+                <li>Technical and creative writing</li>
+            </ul>
+            <h2>Experience</h2>
+            <div class="name-date">
+                <h3>Crew Member - Sedgewick Burger King</h3>
+                <h4 class="resume-date">Aug 2023 to Dec 2023</h4>
+            </div>
+            <ul>
+                <li>Cooperated with co-workers to prepare menu items and ensure customer service in a timely fashion</li>
+                <li>Coordinated quickly amongst crew to maintain efficient work</li>
+                <li>Carefully monitored food items and inventory hourly to prevent cross-contamination, ensure fresh food, and keep equipment clean</li>
+                <li>Devoted to an assigned 40-hour schedule while remaining flexible to changes</li>
+            </ul>
+            <div class="name-date">
+                <h3>Proselyting Missionary - Farmington, New Mexico - The Church of Jesus Christ of Latter-day Saints</h3>
+                <h4 class="resume-date">Jul 2021 to Jul 2023</h4>
+            </div>
+            <ul>
+                <li>Served among Navajo Nation</li>
+                <li>Found and talked to new people with whom to share a message every day in diverse manners</li>
+                <li>Taught in on-on-one or small group setting daily</li>
+                <li>Trained and directed work of 4-8 other missionaries while serving in various leadership positions</li>
+                <li>Scheduled appointments daily and weekly</li>
+                <li>Reported weekly to leaders</li>
+            </ul>
+            <div class="name-date">
+                <h3>New Mexico Mission of Mercy - Farmington, New Mexico</h3>
+                <h4 class="resume-date">Jul 2022</h4>
+            </div>
+            <ul>
+                <li>Entered data for dental work</li>
+            </ul>
+        </div>
     </main>
     <footer>
         <h4 class="copy">Portfolio &copy; 2024 - Noah Merrell</h4>
