--- a/aboutme.html
+++ b/aboutme.html
@@ -19,16 +19,19 @@
         </nav>
     </header>
     <main>
-        <h1>About Me</h1>
-        <img src="images/merrell-family.webp" alt="picture of the Merrell family">
-        <h2>Where have you been?</h2>
-        <p>I come from Port Orchard Washington which is where I've lived the majority of my life. I then went served as a proselyting missionary for the Church of Jesus Christ of Latter-day Saints for two years during which I served in Sanders AZ, Indian Wells AZ, Toadlena NM, and Lupton AZ. Afterwards, I've been attending school at Brigham Young University - Idaho in Rexburg ID.</p>
-        <h2>How has your family influenced who you are today?</h2>
-        <p>I am very close to my family despite us currently living in different states from one another. As the youngest of four, I've had the unique perspective of being able to learn from their example and receive a plethora of helpful advice for the future. My sister and two brothers are all married and I've been able to learn from my in-laws as well. My family has played a major role in defining who I am today and my loving parents have taught my valuable life lessons that has enabled me to flourish and grow.</p>
-        <h2>What are your hobbies and interests?</h2>
-        <p>I love working with computers and software, whether that be programming, image editing software, or spreadsheet applications. I enjoy playing a myriad of board games and video games, as well as designing my own. I also am passionate about creative writing and developing my own unique ideas and settings.</p>
-        <h2>What is your educational background?</h2>
-        <p>Growing up, I attended Burley Glenwood Elementary and Cedar Heights Middle School. In my freshman and sophmore year of high school I attended Washington Virtual Academies before enrolling the Running Start Program in Olympic College where I earned my high school diploma and Associated of Arts. After serving a 2 year mission I've been attending Brigham Young University - Idaho as a Computer Science major.</p>
+        <div class="aboutme-parallax">
+            <h1 class="page-title">About Me</h1>
+        </div>
+        <div class="aboutme-content">
+            <h2>Where have you been?</h2>
+            <p>I come from Port Orchard Washington which is where I've lived the majority of my life. I then went served as a proselyting missionary for the Church of Jesus Christ of Latter-day Saints for two years during which I served in Sanders AZ, Indian Wells AZ, Toadlena NM, and Lupton AZ. Afterwards, I've been attending school at Brigham Young University - Idaho in Rexburg ID.</p>
+            <h2>How has your family influenced who you are today?</h2>
+            <p>I am very close to my family despite us currently living in different states from one another. As the youngest of four, I've had the unique perspective of being able to learn from their example and receive a plethora of helpful advice for the future. My sister and two brothers are all married and I've been able to learn from my in-laws as well. My family has played a major role in defining who I am today and my loving parents have taught my valuable life lessons that has enabled me to flourish and grow.</p>
+            <h2>What are your hobbies and interests?</h2>
+            <p>I love working with computers and software, whether that be programming, image editing software, or spreadsheet applications. I enjoy playing a myriad of board games and video games, as well as designing my own. I also am passionate about creative writing and developing my own unique ideas and settings.</p>
+            <h2>What is your educational background?</h2>
+            <p>Growing up, I attended Burley Glenwood Elementary and Cedar Heights Middle School. In my freshman and sophmore year of high school I attended Washington Virtual Academies before enrolling the Running Start Program in Olympic College where I earned my high school diploma and Associated of Arts. After serving a 2 year mission I've been attending Brigham Young University - Idaho as a Computer Science major.</p>
+        </div>
     </main>
     <footer>
         <h4 class="copy">Portfolio &copy; 2024 - Noah Merrell</h4>
