--- a/aboutme.html
+++ b/aboutme.html
@@ -35,7 +35,7 @@
     </main>
     <footer>
         <h4 class="copy">Portfolio &copy; 2024 - Noah Merrell</h4>
-        <h4><a href="site-plan.html">Site Plan</a></h4>
+        <h4 class="site-plan-link"><a href="site-plan.html">Site Plan</a></h4>
         <div class="social">
             <a href="https://github.com/NoahWMerrell" target="_blank">
                 <img src="images/github-mark/github-mark-white.png" alt="github icon">
