Fixed grammar and spelling errors

--- a/resume.html
+++ b/resume.html
@@ -81,8 +81,8 @@
             <ul>
                 <li>Served among Navajo Nation</li>
                 <li>Found and talked to new people with whom to share a message every day in diverse manners</li>
-                <li>Taught in on-on-one or small group setting daily</li>
-                <li>Trained and directed work of 4-8 other missionaries while serving in various leadership positions</li>
+                <li>Taught in one-on-one or small group settings daily</li>
+                <li>Trained and directed the work of 4-8 other missionaries while serving in various leadership positions</li>
                 <li>Scheduled appointments daily and weekly</li>
                 <li>Reported weekly to leaders</li>
             </ul>
